<resources>
    <string name="app_name">WayPinPoint</string>

    <!-- Login -->
    <string name="login_screen_label">Sign In</string>
    <string name="login_textview_email">Email</string>
    <string name="login_textview_username">Username</string>
    <string name="login_textview_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_register_label">Not a member? Sign Up</string>
    <string name="login_register_success_message">User Registered Successfully</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_error_message_api">User not validated</string>

    <!-- Register -->
    <string name="register_title">Register</string>
    <string name="register_button">Register</string>
    <string name="register_confirm_password_label">Confirm Password</string>
    <string name="register_address_hint">Address</string>
    <string name="register_phone_number_hint">Phone Number</string>
    <string name="register_nif_hint">NIF</string>

    <!-- Menu -->
    <string name="menu_my_profile_label">My Profile</string>
    <string name="menu_change_host_label">Change Host</string>
    <string name="menu_my_activities_label">My Activities</string>
    <string name="menu_my_receipts_label">My Receipts</string>
    <string name="menu_employees_label">Employees</string>
    <string name="menu_validate_qr_code_label">Validate QR-Code</string>
    <string name="menu_logout_label">Logout</string>
    <string name="menu_header_image_description">Menu header Image</string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <string name="menu_cart">Cart</string>

    <!-- My Profile-->
    <string name="my_profile_nif">NIF</string>
    <string name="my_profile_address">Address</string>
    <string name="my_profile_phone">Phone</string>
    <string name="my_profile_save_button">Save Changes</string>
    <string name="my_profile_delete_button">Delete Profile</string>
    <string name="my_profile_deleted">Profile Deleted With Success</string>
    <string name="my_profile_fields_warning">You have to fill all the fields</string>
    <string name="my_profile_nif_phone_warning">Nif/Phone has to be valid</string>
    <string name="menu_main_user_edited">User Edited With Success</string>
    <string name="menu_main_pic_edited">Photo edited With Success</string>
    <string name="my_profile_photo_edit_label">Click the photo to edit</string>
    <string name="my_profile_confirm_password_warning">The entered passwords are different</string>
    <string name="my_profile_username_warning">Username is invalid</string>
    <string name="my_profile_email_warning">Email is invalid\n</string>
    <string name="my_profile_password_warning">The password has to be 8 characters long</string>

    <!-- Dashboard -->
    <string name="dashboard_name_label">Name: </string>
    <string name="dashboard_description_label">Description: </string>
    <string name="dashboard_category_label">Category: </string>
    <string name="dashboard_price_label">Price: </string>
    <string name="dashboard_address_label">Address: </string>

    <!-- Errors-->
    <string name="error_no_internet">No Internet Connection</string>
    <string name="login_error_message">Something went wrong</string>
    <string name="login_invalid_login">Invalid Login</string>
    <string name="login_error_parse_response">Failed to parse response.</string>
    <string name="api_hostname_config">ApiHostnameConfig</string>
    <string name="bt_hostname_save">Save</string>
    <string name="config_api_hostname_title">Config Api Hostname</string>
    <string name="api_hostname_back_login">Back</string>
    <string name="error_invalid_token">Invalid token</string>
    <string name="error_default">Something went wrong</string>
    <string name="error_rating_required">Rating required to send a review</string>
    <string name="error_message_empty">Please enter a message on the review</string>
    <string name="error_quantity_empty">Field cannot be empty</string>
    <string name="error_quantity_zero">Quantity must be greater than 0</string>
    <string name="error_invalid_quantity">Invalid quantity</string>
    <string name="error_no_email_provided">No Email Provided</string>


    <!-- General Messages -->
    <string name="message_save_changes">Save changes</string>

    <!-- Dialogs-->
    <string name="dialog_logout_message">Do you really want to logout ?</string>
    <string name="dialog_delete_title">Delete Profile</string>
    <string name="dialog_delete_message">Are you sure you want to delete your profile?\n Such an action cannot be reversed</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_review_remove">Remove Review</string>
    <string name="dialog_review_message">Do you really wish to delete this review?</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="delete_activity_title">Delete activity</string>
    <string name="dialog_remove_activity_message">Do you really want to remove it</string>
    <string name="dialog_download">Download</string>
    <string name="dialog_invoice_title">Remove or Download Invoice</string>
    <string name="dialog_invoice_message">Do you wish to remove or download this invoice?</string>

    <!-- QR Code -->
    <string name="QR_Code_valid"><bold>"Valid QR Code: "</bold></string>
    <string name="QR_Code_invalid"> <bold>Invalid Ticket</bold></string>
    <string name="qr_code_scan_fail">QR code scanning failed</string>
    <string name="scanned_qr_code">"Scanned QR Code: "</string>

    <!-- Cart -->
    <string name="number_of_tickets">Number of Tickets:</string>
    <string name="cart">Cart</string>
    <string name="save">Add to Cart</string>
    <string name="delete_cart_item">Do you really want to delete this cart item?</string>
    <string name="remove_cart_item">Remove cart item</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="activity_name_label">Activity Name: </string>
    <string name="activity_name">Activity Name</string>
    <string name="quantity_label">Quantity: </string>
    <string name="price_label">Price: </string>
    <string name="date_label">Date: </string>
    <string name="remove">Remove</string>
    <string name="cart_edited">Cart Edited!</string>
    <string name="cart_deleted">Cart Deleted!</string>
    <string name="quantity">Quantity</string>
    <string name="cart_added_successfully">Cart added successfully!</string>
    <string name="cart_activity_name">Activity Name:</string>
    <string name="cart_quantity">Quantity:</string>
    <string name="cart_total">Price: </string>
    <string name="cart_date">Date:</string>
    <string name="save_Cart">Save</string>
    <string name="cart_checkout_success">Receipts and Ticket sent through email!</string>
    <string name="cart_checkout_error">Could not complete purchase!</string>
    <string name="checkout_success_message">Checkout Successful ! Your Ticket and Receipt were sent to your email</string>
    <string name="cart_edit_success_message">Cart Edited Successfully</string>
    <string name="cart_removed_successful_message">Cart Removed Successfully</string>

    <!-- Review -->
    <string name="review_details_message_hint">Message</string>
    <string name="review_add_message">Add Review</string>
    <string name="review_details_title">Review Details</string>
    <string name="review_user_mismatch">You are not the author of this review</string>
    <string name="fab_add_Review">Add Review</string>
    <string name="review_author_title">Author:</string>
    <string name="review_date_title">Date:</string>
    <string name="review_message_title">Message:</string>
    <string name="review_score_title">Score:</string>
    <string name="review_added_success_message">Review Added Successfully</string>
    <string name="review_removed_success_message">Review Removed Successfully</string>
    <string name="review_edit_success">Review Edited Successfully</string>

    <!-- Empty View -->
    <string name="empty_placeholder_icon_desc">Empty state placeholder</string>
    <string name="empty_placeholder_message">No Reviews added. Be the first to add one!</string>
    <string name="no_activities_message">No activities found. Explore more!</string>
    <string name="empty_cart_message">Your cart is empty. Add items now!</string>
    <string name="empty_photos_message">No photos added to this activity. Be the first to add a memory!</string>
    <string name="empty_my_activities_message">You have no activities added. Add your first activity here !</string>
    <string name="empty_invoices_message">You have no Invoices at this time. \nBuy tickets to our amazing activities and check your invoices here!</string>
    <string name="img_default">img_default</string>


    <!-- Activities -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="priceperpax">PricePerPax</string>
    <string name="maxpax">MaxPax</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="fab_add_activity">Add Activity</string>
    <string name="menu_search_title_search">Search</string>
    <string name="menu_delete">Delete</string>
    <string name="activity_review_label">Review</string>
    <string name="activity_pictures_description">Activity Pictures</string>
    <string name="details_activity_category">Category</string>
    <string name="activity_details_date_time">Date - time</string>
    <string name="create_activity_save">Save</string>
    <string name="selected_date_create_activity">Selected Date</string>
    <string name="category">Category</string>
    <string name="availabillity">Availability</string>
    <string name="ticket_price">Ticket price</string>
    <string name="activity_descritpion">Description</string>
    <string name="menu_list_activities_label">List Activities</string>
    <string name="fab_save">Save</string>
    <string name="activity_create_address">Address</string>
    <string name="fab_add_photo">Add Photo</string>
    <string name="details_activity_title">"Details: "</string>
    <string name="photos_activity_title">Photos for Activity</string>
    <string name="activity_success_message">Activity successfully created!</string>
    <string name="activity_remove_success">Activity removed!</string>
    <string name="activity_edit_success_message">Activity edit successful!</string>
    <string name="Api_hostname_message_before_login">Please config api hostname before login or register</string>
    <string name="activity_string">Activity</string>
    <string name="activity_empty_fields">Please fill in all fields</string>
    <string name="activity_saving_error">Please save the activity again</string>


    <!-- Invoices -->
    <string name="invoice_hour_hint">Hour</string>
    <string name="invoice_participant_label">Participant Username:</string>
    <string name="invoice_activity_label">Activity:</string>
    <string name="invoices_my_invoices">My Invoices</string>

    <!-- Hints -->
    <string name="api_hostname_hint">Api Hostname</string>
    <string name="image_edit_hint">Click the image to edit</string>
    <string name="name_hint">Name</string>
    <string name="description_hint">Description</string>
    <string name="maximum_participants_hint">Maximum Participants</string>
    <string name="ticket_price_hint">Ticket price</string>
    <string name="address_hint">Address</string>
    <string name="add_date_and_hour_hint">Add Date and Hour</string>
    <string name="enter_quantity_hint">Enter Quantity</string>
    <string name="invoice_download_pdf">Download PDF</string>

</resources>