<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navMyProfile"
            android:icon="@drawable/ic_profile_menu"
            android:title="@string/menu_my_profile_label" />
        <item
            android:id="@+id/navListActivities"
            android:icon="@drawable/ic_list_activities_menu"
            android:title="@string/menu_list_activities_label" />

        <item
            android:id="@+id/navMyInvoices"
            android:icon="@drawable/ic_invoice_list"
            android:title="@string/invoices_my_invoices" />

    </group>
    <item
        android:id="@+id/navEmployee"
        android:title="@string/menu_employees_label">
        <menu>
            <item
                android:id="@+id/navMyActivities"
                android:icon="@drawable/ic_my_activities_menu"
                android:title="@string/menu_my_activities_label" />
            <item
                android:id="@+id/navQrCode"
                android:icon="@drawable/ic_qr_code_menu"
                android:title="@string/menu_validate_qr_code_label" />
        </menu>
    </item>

    <group
        android:id="@+id/navLogoutGroup"
        android:menuCategory="secondary">
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/ic_logout_menu"
            android:title="@string/menu_logout_label" />
    </group>

</menu>