<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_textview_username"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etProfileUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_textview_username"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_textview_email"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_textview_email"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile_address"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etProfileAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_profile_address"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile_phone"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etProfilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_profile_phone"
            android:inputType="phone"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textViewNif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile_nif"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etProfileNif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_profile_nif"
            android:inputType="number"
            android:minHeight="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSave"
            android:text="@string/my_profile_save_button" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile_delete_button" />
    </LinearLayout>
</LinearLayout>