<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/registerTvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/login_textview_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/registerTvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/login_textview_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/register_confirm_password_label"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickRegister"
            android:text="@string/register_button" />

    </LinearLayout>
</LinearLayout>
