<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hostnameApiConfigView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".ApiHostnameSetupActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/waypinpointfront" />

    <TextView
        android:id="@+id/tvApiHostname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_api_hostname_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/textEditHostname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/api_hostname_hint"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSaveHostname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:onClick="onClickSaveHostname"
            android:text="@string/bt_hostname_save" />

    </LinearLayout>

</LinearLayout>

